--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "inputmask": "^5.0.0",
     "vue": "^2.6.10",
+    "vue-the-mask": "^0.11.1",
+    "vue-w3c-valid": "0.0.9",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
@@ -23,9 +26,12 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -37,7 +43,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
